# recorder

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  USAGE.md  problems.md  project_map.md  pyproject.toml  ruff.toml
docs/: api-improvements.md  decorator.md  engine.md  errors.md  interfaces.md  known-issues.md  plugin.md  proxy_tracking.md  recorder-validation-targets.md  serialize.md  storage.md  targets.md
docs/superpowers/notes/: 2026-06-12-depth-findings.md
docs/superpowers/plans/: 2026-06-12-pytest-recorder.md
docs/superpowers/specs/: 2026-06-12-pytest-recorder-design.md  2026-06-16-record-time-load-validation-design.md  2026-06-16-record-time-load-validation.ats.md  2026-06-16-record-time-load-validation.human.md
recordings/: tests__mockproj__test_depth_py__test_flat_object.json  tests__mockproj__test_depth_py__test_nested_chain_records_outer_only.json  tests__mockproj__test_depth_py__test_pure_callable_raises.json  tests__mockproj__test_depth_py__test_pure_callable_returns.json
src/pytest_recorder/: __init__.py  decorator.py  engine.py  errors.py  interfaces.py  plugin.py  proxy_tracking.py  serialize.py  storage.py  targets.py
tests/: _targetmod.py  test_decorator.py  test_engine.py  test_integration.py  test_serialize.py  test_storage.py  test_targets.py  test_wiki1.py
tests/mockproj/: conftest.py  objects.py  test_api.py  test_depth.py
tests/mockproj/recordings/: test_api__test_bare_record_decorator_fixture.json  (+6 more)
tests/recordings/: test_wiki1__test_search_result_is_iterable.json  test_wiki1__test_search_result_supports_index.json
