[project]
name = "pytest-recorder"
version = "0.1.0"
description = "Record/replay fixture mocking for system tests"
requires-python = ">=3.11"
dependencies = ["pytest>=8", "numpy", "pandas"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
