[project]
name = "pytest-recorder"
version = "0.1.0"
description = "Record/replay fixture mocking for system tests"
requires-python = ">=3.11"
dependencies = [
    "pytest>=8",
    "numpy",
    "pandas",
    "wikipedia>=1.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.entry-points.pytest11]
recorder = "pytest_recorder.plugin"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
files = ["src", "tests"]

[[tool.mypy.overrides]]
# pandas and wikipedia ship no type stubs; used only in the testbed.
module = ["pandas", "wikipedia"]
ignore_missing_imports = true

[dependency-groups]
dev = [
    "mypy>=2.1.0",
]
